working on exec_scripts/

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,12 +2,21 @@ FROM rocker/tidyverse:3.5.1
 MAINTAINER Jonathan Callahan <jonathan@mazamascience.com>
 
 ################################################################################
-# Extra R packages from CRAN
-RUN install2.r --error -r "https://cran.rstudio.com" \
+RUN apt-get update \
+  && apt-get install -y --no-install-recommends \
+    apt-utils \
+    procps \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/ \
+  && rm -rf /tmp/downloaded_packages/ /tmp/*.rds \
+  ## Install R packages from CRAN
+  && install2.r --error -r "https://cran.rstudio.com" \
+    optparse \
     sys
 
 # Latest updates frrom GitHub
 RUN installGithub.r \
-    mazamascience/mazamaproductionutils
+    MazamaScience/MazamaCoreUtils \
+    MazamaScience/MazamaProductionUtils
 
 
