--- a/docker/Makefile
+++ b/docker/Makefile
@@ -2,5 +2,5 @@
 # Makefile for building and running docker containers
 
 production_build:
-	docker build --no-cache -t mazamascience/productionutils:0.0.0.9000 .
+	docker build --no-cache -t production-utils:0.0.0.9000 -t production-utils:latest -f Dockerfile .
 
